--- a/app/logging_config.json
+++ b/app/logging_config.json
@@ -5,6 +5,6 @@
     "level": "info",
     "rotation": "20 days",
     "retention": "1 months",
-    "format": "<level>{level: <8}</level> <green>{time:YYYY-MM-DD HH:mm:ss.SSS Z}</green> request id: {extra[request_id]} - <cyan>{name}</cyan>:<cyan>{function}</cyan> - <level>{message}</level>"
+    "format": "<level>{level: <8}</level> request id: {extra[request_id]} - <cyan>{name}</cyan>:<cyan>{function}</cyan> - <level>{message}</level>"
   }
 }
