--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -8,14 +8,17 @@ RUN apt update && apt install -y \
     unixodbc \
     unixodbc-dev \
     gnupg
-    
+
 
 # # define environment variables
+ENV TZ=Asia/Tokyo
+
 # ARG DATABASE_USERNAME
 # ENV DATABASE_USERNAME=$DATABASE_USERNAME
 
 # ARG DATABASE_PASSWORD
 # ENV DATABASE_PASSWORD=$DATABASE_PASSWORD
+
 
 # install the odbc driver for SQL Server, version 18
 ## Here this installs the driver based on instruction for Debian 11 since "bullseye" is based on it.
@@ -33,4 +36,4 @@ COPY . .
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
 # run the default command which starts the application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
+# CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
