--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,19 +26,12 @@ repos:
           - --ignore-init-module-imports
           - --remove-unused-variables
 
-  # - repo: https://github.com/psf/black
-  #   rev: 22.3.0
-  #   hooks:
-  #     - id: black
-  #       args:
-  #         - app/
-
-  # - repo: https://gitlab.com/pycqa/flake8
-  #   rev: 3.11.3
-  #   hooks:
-  #     - id: flake8
-  #       args:
-  #         - app/
+  - repo: https://github.com/psf/black
+    rev: 22.3.0
+    hooks:
+      - id: black
+        args:
+          - app/
 
   # - repo: https://github.com/pre-commit/mirrors-mypy
   #   rev: v0.942
