--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ DEBUG=true
 SENTRY_SDK_DNS=""
 
 # The following items are used in app/database.py to connect to SQL Server
-# Please prepare one for your dev environment or update the related code if you use 
+# Please prepare one for your dev environment or update the related code if you use
 # a different RDBMS.
 IS_API_GATEWAY=false
 
@@ -11,3 +11,7 @@ SERVER_URI="dummy:server"
 DATABASE_NAME="database"
 DATABASE_USERNAME="user"
 DATABASE_PASSWORD="password"
+
+# Environment variables used to validate tokens issued by NextAuth
+NEXTAUTH_SECRET='your_secret'
+NEXTAUTH_URL='http://localhost:3000'
