--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,71 +1,68 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-docker-compose
 {
-	"name": "Existing Docker Compose (Extend)",
+  "name": "Existing Docker Compose (Extend)",
 
-	// Update the 'dockerComposeFile' list if you have more compose files or use different names.
-	// The .devcontainer/docker-compose.yml file contains any overrides you need/want to make.
-	"dockerComposeFile": [
-		"../docker-compose-local.yml",
-		"docker-compose.yml"
-	],
+  // Update the 'dockerComposeFile' list if you have more compose files or use different names.
+  // The .devcontainer/docker-compose.yml file contains any overrides you need/want to make.
+  "dockerComposeFile": ["../docker-compose-local.yml", "docker-compose.yml"],
 
-	// The 'service' property is the name of the service for the container that VS Code should
-	// use. Update this value and .devcontainer/docker-compose.yml to the real service name.
-	"service": "api-local",
+  // The 'service' property is the name of the service for the container that VS Code should
+  // use. Update this value and .devcontainer/docker-compose.yml to the real service name.
+  "service": "api-local",
 
-	// The optional 'workspaceFolder' property is the path VS Code should open by default when
-	// connected. This is typically a file mount in .devcontainer/docker-compose.yml
-	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"njpwerner.autodocstring",
-				"njpwerner.autodocstring",
-				"ms-azuretools.vscode-docker",
-				"henriiik.docker-linter",
-				"janisdd.vscode-edit-csv",
-				"donjayamanne.git-extension-pack",
-				"ms-python.isort",
-				"nickdemayo.vscode-json-editor",
-				"ccimage.jsonviewer",
-				"magicstack.MagicPython",
-				"yzhang.markdown-all-in-one",
-				"bierner.markdown-preview-github-styles",
-				"christian-kohler.path-intellisense",
-				"esbenp.prettier-vscode",
-				"donjayamanne.python-extension-pack",
-				"Bar.python-import-helper",
-				"mgesbert.python-path",
-				"alexcvzz.vscode-sqlite",
-				"mtxr.sqltools-driver-sqlite",
-				"shuworks.vscode-table-formatter",
-				"ansenhuang.vscode-view-readme",
-				"mosapride.zenkaku",
-				"ICS.japanese-proofreading",
-				"ms-python.black-formatter"
-			]
-		}
-	}
+  // The optional 'workspaceFolder' property is the path VS Code should open by default when
+  // connected. This is typically a file mount in .devcontainer/docker-compose.yml
+  "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "njpwerner.autodocstring",
+        "njpwerner.autodocstring",
+        "ms-azuretools.vscode-docker",
+        "henriiik.docker-linter",
+        "janisdd.vscode-edit-csv",
+        "donjayamanne.git-extension-pack",
+        "nickdemayo.vscode-json-editor",
+        "ccimage.jsonviewer",
+        "magicstack.MagicPython",
+        "yzhang.markdown-all-in-one",
+        "bierner.markdown-preview-github-styles",
+        "christian-kohler.path-intellisense",
+        "esbenp.prettier-vscode",
+        "donjayamanne.python-extension-pack",
+        "Bar.python-import-helper",
+        "mgesbert.python-path",
+        "alexcvzz.vscode-sqlite",
+        "mtxr.sqltools-driver-sqlite",
+        "shuworks.vscode-table-formatter",
+        "ansenhuang.vscode-view-readme",
+        "mosapride.zenkaku",
+        "ICS.japanese-proofreading",
+        "k--kato.intellij-idea-keybindings",
+        "charliermarsh.ruff"
+      ]
+    }
+  }
 
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
+  // Features to add to the dev container. More info: https://containers.dev/features.
+  // "features": {},
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  // "forwardPorts": [],
 
-	// Uncomment the next line if you want start specific services in your Docker Compose config.
-	// "runServices": [],
+  // Uncomment the next line if you want start specific services in your Docker Compose config.
+  // "runServices": [],
 
-	// Uncomment the next line if you want to keep your containers running after VS Code shuts down.
-	// "shutdownAction": "none",
+  // Uncomment the next line if you want to keep your containers running after VS Code shuts down.
+  // "shutdownAction": "none",
 
-	// Uncomment the next line to run commands after the container is created.
-	// "postCreateCommand": "cat /etc/os-release",
+  // Uncomment the next line to run commands after the container is created.
+  // "postCreateCommand": "cat /etc/os-release",
 
-	// Configure tool-specific properties.
-	// "customizations": {},
+  // Configure tool-specific properties.
+  // "customizations": {},
 
-	// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "devcontainer"
+  // Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
+  // "remoteUser": "devcontainer"
 }
