--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ certifi==2022.12.7
 click==8.1.3
 dnspython==2.3.0
 email-validator==2.0.0.post2
-fastapi==0.104.0
+fastapi>=0.112.1,<0.113.0
 fastapi-debug-toolbar==0.5.0
 greenlet==2.0.2
 h11==0.14.0
@@ -29,7 +29,6 @@ pyinstrument==4.6.0
 pyodbc==4.0.39
 python-dateutil==2.8.2
 python-dotenv==1.0.0
-python-multipart==0.0.6
 pytz==2023.3.post1
 PyYAML==6.0
 sentry-sdk==1.32.0
@@ -37,7 +36,6 @@ six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.12
 sqlparse==0.4.4
-starlette==0.27.0
 typing_extensions==4.8.0
 tzdata==2023.3
 ujson==5.7.0
